# wgpu_rs_project

./: .gitignore  Cargo.toml  READE.md  README.md  kernel_compile.sh  native_compile.sh  spirv.sh  wasm_compile.sh
cpu_version/: Cargo.toml
cpu_version/src/: index_testing.rs  lib.rs  main.rs
debug_shaders/: Cargo.toml
debug_shaders/src/: aabb_shader.rs  font.rs  lib.rs  main.rs
fmm_project/: Cargo.toml  README.md
fmm_project/src/: fmm.rs  main.rs
fonts/: Cargo.toml
fonts/src/: lib.rs
geometry/: Cargo.toml
geometry/src/: aabb.rs  lib.rs  triangle.rs
hello_project/: Cargo.toml
hello_project/src/: main.rs
index_tables/: Cargo.toml
index_tables/src/: lib.rs  main.rs
jaankaup_core/: Cargo.toml
jaankaup_core/src/: assets.rs  buffer.rs  camera.rs  compute.rs  input.rs  lib.rs  mc.rs  misc.rs  noise3d.rs  pipeline.rs  render_pipelines.rs  shader.rs  temp.rs  texture.rs  two_triangles.rs  vvvvnnnn.rs  wgpu_system.rs
model_loader/: Cargo.toml
model_loader/src/: lib.rs
render_shaders/: Cargo.toml
render_shaders/src/: lib.rs
shaders/: data3d_test.comp  fmm.comp  fmm_data_generator.comp  font.comp  mc_distance_field.comp  mc_test.comp  mc_test_slime.comp  mc_test_slime_noise3d_texture.comp  numbers.comp  render_vvvc_camera.frag  render_vvvc_camera.vert  render_vvvvnnnn_camera.frag  render_vvvvnnnn_camera.vert  renderer_4v4n.frag  renderer_4v4n.vert  screen_texture.vert  sphere_tracer_fmm.comp
shaders/spirv/: data3d_test.comp.spv  fmm.comp.spv  fmm_data_generator.comp.spv  font.comp.spv  mc_distance_field.comp.spv  mc_test.comp.spv  mc_test_slime.comp.spv  mc_test_slime_noise3d_texture.comp.spv  numbers.comp.spv  render_vvvc_camera.frag.spv  render_vvvc_camera.vert.spv  render_vvvvnnnn_camera.frag.spv  render_vvvvnnnn_camera.vert.spv  renderer_4v4n.frag.spv  renderer_4v4n.vert.spv  screen_texture.frag.spv  screen_texture.vert.spv  sphere_tracer_fmm.comp.spv  sphere_tracer_vmm.comp.spv
shaders_wgsl/: data3d_test.wgsl  debug.wgsl  mc_test.wgsl  mc_test_slime_noise3d_texture.wgsl  renderer_v3c1.wgsl  renderer_v4n4.wgsl  renderer_v4n4_plain.wgsl  two_triangles.wgsl
src/: application.rs  main.rs  wgpu_system.rs
