[workspace]
resolver = "2"

members = [
    "jaankaup_core",
    "hello_project",
    "fmm_project",
    "cpu_version",
    "model_loader",
    "geometry",
    "debug_shaders",
    "render_shaders",
    "index_tables",
]

[profile.dev]
opt-level = 1
debug = false

[profile.release]
opt-level = 1
debug = false
