[package]
name = "fmm_project"
version = "0.1.0"
authors = ["jaankaup <janne.a.kauppinen@student.jyu.fi>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[example]]
name = "fmm_project"
path = "src/main.rs"

[dependencies]
winit = { version = "0.24.0", features = ["web-sys"] }
bytemuck = { version = "1.4", features = ["derive"] }
jaankaup_core = { path = "../jaankaup_core" }
model_loader = { path = "../model_loader" }
render_shaders = { path = "../render_shaders" }
geometry = { path = "../geometry" }
