[package]
name = "hello_project"
version = "0.1.0"
authors = ["jaankaup <janne.a.kauppinen@student.jyu.fi>"]
edition = "2018"

[dependencies]

wgpu = { git = "https://github.com/gfx-rs/wgpu-rs" }
winit = { version = "0.24.0", features = ["web-sys"] }
jaankaup_core = { path = "../jaankaup_core" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4.19"
