[package]
name = "hello_project"
version = "0.1.0"
authors = ["jaankaup <janne.a.kauppinen@student.jyu.fi>"]
edition = "2018"

[[example]]
name = "hello_project"
path = "src/main.rs"

[dependencies]

winit = { version = "0.24.0", features = ["web-sys"] }
jaankaup_core = { path = "../jaankaup_core" }
log = "0.4"
cgmath = "0.18"
bytemuck = { version = "1.4", features = ["derive"] }
byteorder = "1.4.3"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies.subscriber]
package = "wgpu-subscriber"
version = "0.1"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
pollster = "0.2"

[target.'cfg(target_arch = "wasm32")'.dependencies]
