[package]
name = "render_shaders"
version = "0.1.0"
authors = ["jaankaup <janne.a.kauppinen@student.jyu.fi>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]

[dependencies]
wgpu = { git = "https://github.com/gfx-rs/wgpu-rs", rev="cadc2df8a106ad122c10c2e07733ade8f1e5653c" }
#wgpu = { git = "https://github.com/gfx-rs/wgpu-rs", features=["trace"] }
jaankaup_core = { path = "../jaankaup_core" }
